--- a/WBooks/Login/LoginView.xib
+++ b/WBooks/Login/LoginView.xib
@@ -54,17 +54,21 @@
                                     <constraints>
                                         <constraint firstAttribute="height" constant="52" id="LKg-Hp-Vsb"/>
                                     </constraints>
+                                    <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="15"/>
+                                    <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                     <state key="normal" title="Button"/>
-                                    <buttonConfiguration key="configuration" style="plain" title="SIGN IN" buttonSize="medium" titleAlignment="center">
-                                        <backgroundConfiguration key="background" cornerRadius="30">
-                                            <color key="backgroundColor" systemColor="secondarySystemGroupedBackgroundColor"/>
-                                        </backgroundConfiguration>
-                                        <fontDescription key="titleFontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="18"/>
-                                    </buttonConfiguration>
                                 </button>
                             </subviews>
                             <constraints>
+                                <constraint firstItem="6la-wz-0gZ" firstAttribute="leading" secondItem="xLI-H5-779" secondAttribute="leading" id="0Vu-Su-c60"/>
+                                <constraint firstItem="BnA-df-iyC" firstAttribute="leading" secondItem="xLI-H5-779" secondAttribute="leading" id="2eS-7k-QRT"/>
+                                <constraint firstAttribute="trailing" secondItem="BnA-df-iyC" secondAttribute="trailing" id="DWq-6t-Ruf"/>
                                 <constraint firstAttribute="height" constant="196" id="GbW-CP-xCj"/>
+                                <constraint firstItem="BnA-df-iyC" firstAttribute="top" secondItem="Mry-hR-UWo" secondAttribute="bottom" constant="20" id="QqX-KV-cBw"/>
+                                <constraint firstItem="Mry-hR-UWo" firstAttribute="leading" secondItem="xLI-H5-779" secondAttribute="leading" id="Uc1-qP-DUq"/>
+                                <constraint firstAttribute="trailing" secondItem="Mry-hR-UWo" secondAttribute="trailing" id="d6i-ZU-m1H"/>
+                                <constraint firstItem="6la-wz-0gZ" firstAttribute="top" secondItem="BnA-df-iyC" secondAttribute="bottom" constant="20" id="nF2-I1-x8b"/>
+                                <constraint firstAttribute="trailing" secondItem="6la-wz-0gZ" secondAttribute="trailing" id="xxF-BQ-IMB"/>
                             </constraints>
                         </stackView>
                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" translatesAutoresizingMaskIntoConstraints="NO" id="3hX-oM-ebC">
