--- a/WBooks/Rentals/RentalsView.xib
+++ b/WBooks/Rentals/RentalsView.xib
@@ -9,27 +9,14 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="RentalsView" customModule="WBooks" customModuleProvider="target">
             <connections>
-                <outlet property="rentalsTableView" destination="RCs-yk-6T5" id="gVK-cO-xth"/>
-                <outlet property="rentalsView" destination="iN0-l3-epB" id="bNr-f8-66c"/>
+                <outlet property="rentalsView" destination="iN0-l3-epB" id="x42-EK-stS"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB">
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-            <subviews>
-                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="RCs-yk-6T5">
-                    <rect key="frame" x="20" y="20" width="335" height="587"/>
-                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                </tableView>
-            </subviews>
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-            <constraints>
-                <constraint firstItem="RCs-yk-6T5" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="20" id="D5z-Jp-Y73"/>
-                <constraint firstItem="RCs-yk-6T5" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="20" id="j0x-WT-zBh"/>
-                <constraint firstAttribute="bottom" secondItem="RCs-yk-6T5" secondAttribute="bottom" constant="60" id="jFw-Db-8Fa"/>
-                <constraint firstAttribute="trailing" secondItem="RCs-yk-6T5" secondAttribute="trailing" constant="20" id="pcq-qu-ito"/>
-            </constraints>
             <point key="canvasLocation" x="4.615384615384615" y="20.616113744075829"/>
         </view>
     </objects>
